<resources>
    <string name="app_name">FunAlgo</string>
    <string name="logo">logo</string>
    <string name="name">Name</string>
    <string name="user">user</string>
    <string name="nickname">Nickname</string>
    <string name="avatar1">Button</string>
    <string name="avatar2">avatar2</string>
    <string name="avatar3">avatar3</string>
    <string name="avatar4">avatar4</string>
    <string name="avatar5">Button</string>
    <string name="avatar6">avatar6</string>
    <string name="avatar7">avatar7</string>
    <string name="avatar8">avatar8</string>
    <string name="avatar9">avatar9</string>
    <string name="textview">TextView</string>
    <string name="start">start</string>
    <string name="themes_button">THEMES</string>
    <string name="wallpaper1_button" />
    <string name="wallpaper2_button" />
    <string name="wallpaper3_button" />
    <string name="volumeOn_button" />
    <string name="return_button" />
    <string name="musics_button">MUSICS</string>
    <string name="music1_button">MUSIC 1</string>
    <string name="music2_button">MUSIC 2</string>
    <string name="music3_button">MUSIC 3</string>
    <string name="music4_button">MUSIC 4</string>
    <string name="musics_image" />
    <string name="goForward">go Forward</string>
    <string name="honeycomb">honeycomb</string>
    <string name="turn_Rıght">turn rıght</string>
    <string name="turnLeft">turn Left</string>
    <string name="bee">bee</string>
    <string name="honey">honey</string>
    <string name="go_forward">GO FORWARD</string>
    <string name="turn_right">TURN RIGHT</string>
    <string name="turn_left">TURN LEFT</string>
    <string name="apply">apply</string>
    <string name="remove">Remove</string>
    <string name="reset">reset</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="menu">MENU</string>
    <string name="retry">RETRY</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="star1">star1</string>
    <string name="star2">star2</string>
    <string name="star3">star3</string>
    <string name="Movements">Movements</string>
    <string name="get_key">get key</string>
    <string name="get_nectar">get nectar</string>
    <string name="goClockwise">CLOCKWISE ↻</string>
    <string name="goCounterClockwise">COUNTER CLOCKWISE ↺</string>
    <string name="distance_creativeMode">DISTANCE</string>
    <string name="degree_creative">DEGREE</string>
    <string name="apply_button">APPLY</string>
    <string name="reset_button">RESET</string>
    <string name="_1">1</string>
    <string name="tortoise" />
    <string name="human" />
    <string name="tiger" />
    >>>>>>> Stashed changes

</resources>
