<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_page_layout"
    android:background="@drawable/background3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.menu.SettingsPage">

    <Button
        android:id="@+id/return_button_settingsPage"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back1"
        android:text="@string/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voice_button_settingsPage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/volumeon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/themes_button_settingsPage"
        android:layout_width="167dp"
        android:layout_height="92dp"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/wallpaper5"
        android:text="@string/themes_button"
        android:textColor="#000000"
        android:textColorLink="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/musics_button_SettingPage"
        android:layout_width="167dp"
        android:layout_height="92dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/wallpaper8"
        android:text="@string/musics_button"
        android:textColor="#131313"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage"
        tools:text="@string/musics_button" />
    android:layout_marginBottom="256dp"
        android:background="@drawable/wallpaper8"
        android:text="@string/musics_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage"

</androidx.constraintlayout.widget.ConstraintLayout>